--- a/src/index.html
+++ b/src/index.html
@@ -14,38 +14,15 @@
   
   <div class="row">
     <div class="col-8">
-      <div class="nav-bar">
-        <ul class="nav nav-tabs">
-          <li class="nav-item">
-	    <a class="nav-link" href="#">Div.1</a>
-	  </li>
-	  <li class="nav-item">
-	    <a class="nav-link" href="#">Div.1+Div.2</a>
-	  </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Div.2</a>
-	  </li>
-	  <li>
-            <a class="nav-link" href="#">Educational</a>
-	  </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Div.3</a>
-	  </li>
-          <li class="nav-item">
-	    <a class="nav-link" href="#">Div.4</a>
-	  </li>
-	  <li class="nav-item">
-	    <a class="nav-link" href="#">Global</a>
-          </li>
-	  <li class="nav-item">
-            <a class="nav-link" href="#">Other</a>
-          </li>
-	  <li>
-            <a class="nav-link active" href="#">All</a>
-	  </li>
-        </ul>
+      <div class="nav nav-tabs" id="nav-tab" role="tablist">
+	<button class="nav-link" id="div1" data-bs-toggle="tab">Div.1</button>
+	<button class="nav-link" id="div1+2" data-bs-toggle="tab">Div.1 + Div.2</button>
+	<button class="nav-link" id="div2" data-bs-toggle="tab">Div.2</button>
+	<button class="nav-link" id="edu" data-bs-toggle="tab">Educational</button>
+	<button class="nav-link" id="div3" data-bs-toggle="tab">Div.3</button>
+	<button class="nav-link" id="div4" data-bs-toggle="tab">Div.4</button>
+	<button class="nav-link" id="All" data-bs-toggle="tab" aria-selected="false">All</button>
       </div>
-
       <div>
         <table class="table table-striped table-hover">
           <thead>
