添加访问次数统计

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>CF-VP-Helper 多人vp筛选场次工具</title>
   <script type="module" src="./js/main.js"></script>
+  <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 </head>
 <body>
   <div class="container-fluid">
     <h1>CF-VP-Helper</h1>
     <a>powered by weiuou</a>
+    <span id="busuanzi_container_site_pv">本站总访问量<span id="busuanzi_value_site_pv"></span>次</span>
     <br>
   
   <div class="row">
