新增：可被Bing搜索

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <meta name="msvalidate.01" content="879BF73B452433F81DA618C051E9CB3B" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>CF-VP-Helper 多人vp筛选场次工具</title>
